--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,7 @@
     <modules>
         <module>spring-security-oauth2</module>
         <module>spring-security-base</module>
+        <module>spring-security-csrf</module>
     </modules>
 
 
